[package]
name = "yewi-cli"
version = "1.3.1"
edition = "2024"
authors = ["Fiaro fiaromiangaly@gmail.com"]
description = "CLI tool for managing yewi-kit components in Yew projects"
homepage = "https://yewi.pages.dev"
repository = "https://github.com/Emii-lia/yewi-cli"
keywords = ["yew", "ui-kit", "web-development", "components", "wasm"]
categories = ["command-line-utilities", "development-tools::cargo-plugins", "gui", "web-programming", "wasm"]
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "7.1.0"
inquire = "0.9.2"
regex = "1.12.2"
indicatif = "0.18.3"

[[bin]]
name = "yewi"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true